# Infopara

./: .gitignore  README.md  pyproject.toml  requirements.txt  sources.yaml  tagging_rules.yaml  veille.db
.claude/: launch.json
app/: db.py  fetcher.py  main.py  models.py  scheduler.py  source_detector.py  source_loader.py  tagger.py
app/parsers/: html.py  rss.py
app/templates/: _article_card.html  _articles_list.html  _source_detect_result.html  base.html  index.html  sources.html
tests/: test_parsers.py  test_tagger.py
tests/fixtures/: sample_html.html  sample_rss.xml
