[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veille-auxmed"
version = "0.1.0"
description = "Dashboard de veille pour auxiliaires médicaux libéraux en France"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.9.0",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
